--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,11 @@ services:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_REGION=${AWS_REGION}
+      - CATALOG_WAREHOUSE=${CATALOG_WAREHOUSE}
+      - CATALOG_S3_ENDPOINT=${CATALOG_S3_ENDPOINT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - 8080:8080
       - 10000:10000
