refactor: restructure project layout, add gold layer ETL, and consolidate config
- Split create_iceberg_tables.sql into per-layer files (sql/bronze_schema.sql, silver_schema.sql, gold_schema.sql)
- Add silver_to_gold_transformer.py for Gold layer aggregations
- Add lakehouse-preparer.sh orchestration script (6-step pipeline)
- Consolidate loadgen/.env into root .env (fix credential mismatch)
- Add Superset Dockerfile with Trino driver
- Refactor docker-compose.yaml: loadgen uses root .env, remove stale Trino volume, remove runtime pip install
- Centralize config via config.py dataclass, refactor scripts to use it
- Update entrypoint.sh to run 3 separate schema files
- Update .gitignore with data dirs, secrets, IDE files
- Rewrite README.md and spark/scripts/README.md to reflect current architecture
- Delete stale files (iceberg.properteis typo, duplicate schema files)
- Add boto3, pytest, psycopg2-binary to spark/requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 .env
+loadgen/.env
 __pycache__/
+*.pyc
+.ipynb_checkpoints/
+.idea/
+.vscode/
+*.log
+
+# Data Directories
+warehouse/
+superset/superset_home/
+superset/superset_db_data/
+metastore_db/
+spark-warehouse/
+
+# Secrets
+trino/etc/catalog/iceberg.properties
