--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,41 @@
-# AWS Credentials
-AWS_ACCESS_KEY_ID=admin
-AWS_SECRET_ACCESS_KEY=password
-AWS_REGION=us-east-1
+# Postgres (shared by all services)
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=password
+POSTGRES_DB=lakehouse
 
-# Iceberg Catalog Configuration
+# AWS / MinIO
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
+AWS_REGION=us-east-1
 CATALOG_WAREHOUSE=s3://warehouse/
 CATALOG_S3_ENDPOINT=http://minio:9000
-
-# MinIO Configuration
-MINIO_ROOT_USER=admin
-MINIO_ROOT_PASSWORD=password
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
 MINIO_DOMAIN=minio
+S3_ENDPOINT=http://minio:9000
 
-# Postgres Configuration
-POSTGRES_USER=postgresuser
-POSTGRES_PASSWORD=postgrespw
-POSTGRES_DB=oneshop
+# Superset
+SUPERSET_SECRET_KEY=mysecretkey
+SUPERSET_ADMIN_USERNAME=admin
+SUPERSET_ADMIN_PASSWORD=admin
+SUPERSET_ADMIN_EMAIL=admin@example.com
+SUPERSET_DB=superset
+SUPERSET_DB_USER=superset
+SUPERSET_DB_PASSWORD=superset
+
+# Load Generator
+MINIO_URL=http://minio:9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET_NAME=pageviews
+USERS_SEED_COUNT=10000
+ITEM_SEED_COUNT=1000
+ITEM_INVENTORY_MIN=1000
+ITEM_INVENTORY_MAX=5000
+ITEM_PRICE_MIN=5
+ITEM_PRICE_MAX=500
+PURCHASE_GEN_COUNT=100
+PURCHASE_GEN_EVERY_MS=100
+PAGEVIEW_MULTIPLIER=75
