fix: resolve critical reliability issues and configure airflow
- Fix loadgen not to wipe bucket on every run
- Move streaming checkpoints from /tmp to S3 for persistence
- Remove expensive df.count() calls before writes
- Fix conftest.py to use pathlib and proper config/SQL loading
- Fix config.py default DB name
- Add fail-fast behavior to postgres_loader and bronze_to_silver
- Configure Airflow services in docker-compose with env vars

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,34 @@
 # Postgres (shared by all services)
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=password
+POSTGRES_USER=your_pg_user
+POSTGRES_PASSWORD=your_pg_password
 POSTGRES_DB=lakehouse
 
 # AWS / MinIO
-AWS_ACCESS_KEY_ID=minioadmin
-AWS_SECRET_ACCESS_KEY=minioadmin
+AWS_ACCESS_KEY_ID=your_minio_access_key
+AWS_SECRET_ACCESS_KEY=your_minio_secret_key
 AWS_REGION=us-east-1
 CATALOG_WAREHOUSE=s3://warehouse/
 CATALOG_S3_ENDPOINT=http://minio:9000
-MINIO_ROOT_USER=minioadmin
-MINIO_ROOT_PASSWORD=minioadmin
+MINIO_ROOT_USER=your_minio_access_key
+MINIO_ROOT_PASSWORD=your_minio_secret_key
 MINIO_DOMAIN=minio
 S3_ENDPOINT=http://minio:9000
 
 # Superset
-SUPERSET_SECRET_KEY=mysecretkey
+SUPERSET_SECRET_KEY=change_me_to_a_random_secret
 SUPERSET_ADMIN_USERNAME=admin
-SUPERSET_ADMIN_PASSWORD=admin
+SUPERSET_ADMIN_PASSWORD=change_me
 SUPERSET_ADMIN_EMAIL=admin@example.com
 SUPERSET_DB=superset
 SUPERSET_DB_USER=superset
-SUPERSET_DB_PASSWORD=superset
+SUPERSET_DB_PASSWORD=change_me
 
 # Load Generator
 MINIO_URL=http://minio:9000
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin
+MINIO_ACCESS_KEY=your_minio_access_key
+MINIO_SECRET_KEY=your_minio_secret_key
 MINIO_BUCKET_NAME=pageviews
 USERS_SEED_COUNT=10000
 ITEM_SEED_COUNT=1000
@@ -39,3 +39,12 @@ ITEM_PRICE_MAX=500
 PURCHASE_GEN_COUNT=100
 PURCHASE_GEN_EVERY_MS=100
 PAGEVIEW_MULTIPLIER=75
+
+# Airflow
+AIRFLOW_DB_USER=airflow
+AIRFLOW_DB_PASSWORD=airflow
+AIRFLOW_DB=airflow
+AIRFLOW_ADMIN_USER=admin
+AIRFLOW_ADMIN_PASSWORD=change_me
+AIRFLOW_ADMIN_EMAIL=admin@example.com
+AIRFLOW_WEBSERVER_SECRET_KEY=change_me_to_a_secure_random_key
