feat: add Airflow orchestration with user engagement segmentation DAG
- Add airflow.yaml with webserver, scheduler, init, DB, and MailHog services
- Add user_engagement_segments_dag.py with 4-step pipeline:
  segment (Trino SQL) → export (CSV) → upload (MinIO) → notify (email)
- Use S3Hook and TrinoHook via Airflow connections (no hardcoded creds)
- Automate Airflow connections via AIRFLOW_CONN_ env vars (trino_default,
  minio_default) — no manual CLI setup required
- Automate Superset Trino connection via init_connections.py startup script
- Add gold.user_engagement_segments table to gold_schema.sql with
  segment_date partitioning for incremental daily snapshots
- Add trino.sql with DELETE+INSERT pattern for daily refresh
- Install apache-airflow-providers-amazon and pandas in Airflow Dockerfile
- Add MailHog for dev email testing (SMTP 1025, UI 8025)
- Update README.md with Airflow docs, services table, project structure,
  pipeline diagram, and automated connection instructions
- Fix docker-compose.yaml: remove broken inline Python, mount init script
- Airflow webserver on port 8085 to avoid Spark UI conflict

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,6 @@ superset/superset_home/
 superset/superset_db_data/
 metastore_db/
 spark-warehouse/
-
+airflow/db
 # Secrets
 trino/etc/catalog/iceberg.properties
