--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -126,6 +126,7 @@ services:
       - "8088:8088"
     volumes:
       - ./superset/superset_home:/app/superset_home
+      - ./superset/init_connections.py:/app/init_connections.py
     networks:
       iceberg_net:
     command: >
@@ -133,6 +134,7 @@ services:
         superset db upgrade &&
         superset fab create-admin --username ${SUPERSET_ADMIN_USERNAME} --firstname Superset --lastname Admin --email ${SUPERSET_ADMIN_EMAIL} --password ${SUPERSET_ADMIN_PASSWORD} || true &&
         superset init &&
+        python /app/init_connections.py &&
         superset run -h 0.0.0.0 -p 8088
       "
 
@@ -150,60 +152,6 @@ services:
     networks:
       iceberg_net:
 
-
-x-airflow-common: &airflow-common
-  build:
-    context: ./airflow
-  environment:
-    AIRFLOW__CORE__EXECUTOR: LocalExecutor
-    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${AIRFLOW_DB_USER}:${AIRFLOW_DB_PASSWORD}@airflow-db/${AIRFLOW_DB}
-    AIRFLOW__WEBSERVER__SECRET_KEY: ${AIRFLOW_WEBSERVER_SECRET_KEY}
-    AIRFLOW__WEBSERVER__EXPOSE_CONFIG: 'True'
-    AIRFLOW__SMTP__SMTP_HOST: mailhog
-    AIRFLOW__SMTP__SMTP_PORT: 1025
-    AIRFLOW__SMTP__SMTP_MAIL_FROM: airflow@example.com
-    AIRFLOW__SMTP__SMTP_STARTTLS: 'False'
-    AIRFLOW__SMTP__SMTP_SSL: 'False'
-    AIRFLOW__SMTP__SMTP_USER: ''
-    AIRFLOW__SMTP__SMTP_PASSWORD: ''
-  volumes:
-    - ./airflow/dags:/opt/airflow/dags
-  networks:
-    iceberg_net:
-  depends_on:
-    - airflow-db
-
-  airflow-db:
-    container_name: airflow-db
-    image: postgres:15
-    environment:
-      POSTGRES_USER: ${AIRFLOW_DB_USER}
-      POSTGRES_PASSWORD: ${AIRFLOW_DB_PASSWORD}
-      POSTGRES_DB: ${AIRFLOW_DB}
-    volumes:
-      - ./airflow/db:/var/lib/postgresql/data
-    networks:
-      iceberg_net:
-
-
-  airflow-webserver:
-    container_name: airflow-webserver
-    <<: *airflow-common
-    ports:
-      - "8080:8080"
-    command: webserver
-  airflow-scheduler:
-    container_name: airflow-scheduler
-    <<: *airflow-common
-    command: scheduler
-  airflow-init:
-    container_name: airflow-init
-    <<: *airflow-common
-    command: >
-      bash -c "
-        airflow db init &&
-        airflow users create --username ${AIRFLOW_ADMIN_USER} --password ${AIRFLOW_ADMIN_PASSWORD} --firstname Admin --lastname User --role Admin --email ${AIRFLOW_ADMIN_EMAIL}
-      "
 
 networks:
   iceberg_net:
