--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=your_pg_user
 POSTGRES_PASSWORD=your_pg_password
-POSTGRES_DB=lakehouse
+POSTGRES_DB=oneshop
 
 # AWS / MinIO
 AWS_ACCESS_KEY_ID=your_minio_access_key
