--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,9 @@ services:
       CONFIG_STORAGE_TOPIC: connect-configs
       OFFSET_STORAGE_TOPIC: connect-offsets
       STATUS_STORAGE_TOPIC: connect-status
+      CONFIG_STORAGE_REPLICATION_FACTOR: 1
+      OFFSET_STORAGE_REPLICATION_FACTOR: 1
+      STATUS_STORAGE_REPLICATION_FACTOR: 1
       KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
       VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
       CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
@@ -23,6 +26,9 @@ services:
       INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_REST_ADVERTISED_HOST_NAME: connect
       PLUGIN_PATH: /kafka/connect
+    networks:
+      iceberg_net:
+
 
   debezium-postgres:
     container_name: debezium-postgres
@@ -175,6 +181,9 @@ services:
     ports:
       - "9200:9200"
       - "9600:9600"
+    networks:
+      iceberg_net:
+
 
   postgres:
     image: postgres:18
@@ -202,7 +211,7 @@ services:
       - "8084:8080"
     environment:
       KAFKA_BROKERS: kafka:9092
-      KAFKA_SCHEMAREGISTRY_Enabled: "true"
+      KAFKA_SCHEMAREGISTRY_ENABLED: "true"
       KAFKA_SCHEMAREGISTRY_URLS: http://schema-registry:8081
     networks:
       iceberg_net:
