--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,7 @@ services:
       INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_REST_ADVERTISED_HOST_NAME: connect
+      CONNECT_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       PLUGIN_PATH: /kafka/connect
     networks:
       iceberg_net:
@@ -82,6 +83,10 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       # General settings
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     healthcheck:
       test: [ "CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list" ]
       interval: 5s
@@ -218,7 +223,7 @@ services:
 
 
   connector-setup:
-    image: curlimages/curl
+    image: alpine:latest
     container_name: connector-setup
     depends_on:
       - connect
@@ -231,7 +236,7 @@ services:
       CDC_POSTGRES_USER: ${CDC_POSTGRES_USER}
       CDC_POSTGRES_PASSWORD: ${CDC_POSTGRES_PASSWORD}
       CDC_POSTGRES_DB: ${CDC_POSTGRES_DB}
-    command: [ "/bin/sh", "/kafka-connect/register_connector.sh" ]
+    entrypoint: [ "/bin/sh", "-c", "apk add --no-cache curl gettext && /kafka-connect/register_connector.sh" ]
     networks:
       iceberg_net:
 
@@ -323,6 +328,37 @@ services:
     networks:
       iceberg_net:
 
+
+  flashsale-loadgen:
+    build: flashsale-loadgen
+    container_name: flashsale-loadgen
+    init: true
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+  clickhouse:
+    image: clickhouse/clickhouse-server
+    container_name: clickhouse
+    volumes:
+      - ./clickhouse/default-password.xml:/etc/clickhouse-server/users.d/default-password.xml
+    ports:
+      - "9000:9000"
+      - "8123:8123"
+    ulimits:
+      nproc: 65535
+      nofile:
+        soft: 262144
+        hard: 262144
+
+  streamlit:
+    build: streamlit
+    container_name: streamlit
+    init: true
+    ports:
+      - "8501:8501"
+    depends_on:
+      - clickhouse
 
 networks:
   iceberg_net:
