feat(streaming): integrate avro login simulator and optimize flink pipeline
- Add Python login-load generator using Avro and Schema Registry
- Refactor Flink SQL anomaly jobs to use Statement Sets and bounded Interval Joins
- Update ClickHouse init.sql with ReplacingMergeTree, partitioning and DLQ
- Fix Schema Registry _schemas retention policy bug in docker-compose.yaml
- Add healthchecks to core services in docker-compose.yaml
- Update architecture diagrams (docs/architecture.d2, docs/data_flow.d2)
- Update README.md and add load-generators/README.md docs

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,10 @@ PURCHASE_GEN_COUNT=100
 PURCHASE_GEN_EVERY_MS=100
 PAGEVIEW_MULTIPLIER=75
 
+# Login Simulator (Real-time Avro Streaming)
+KAFKA_BROKERS=kafka:9092
+SCHEMA_REGISTRY_URL=http://schema-registry:8081
+
 # Airflow
 AIRFLOW_DB_USER=airflow
 AIRFLOW_DB_PASSWORD=airflow
