--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,9 +65,24 @@ services:
       POSTGRES_USER: ${CDC_POSTGRES_USER}
       POSTGRES_PASSWORD: ${CDC_POSTGRES_PASSWORD}
 
+  login-loadgen:
+    build: load-generators/login-load
+    container_name: login-loadgen
+    init: true
+    networks:
+      iceberg_net:
+    depends_on:
+      kafka:
+        condition: service_healthy
+      schema-registry:
+        condition: service_healthy
+    environment:
+      KAFKA_BROKERS: kafka:9092
+      SCHEMA_REGISTRY_URL: http://schema-registry:8081
+
   kafka:
     container_name: kafka
-    image: apache/kafka:4.1.1
+    image: apache/kafka:3.7.1
     ports:
       - "9092:9092"
     environment:
@@ -86,6 +101,8 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+    volumes:
+      - kafka_data:/tmp/kraft-combined-logs
     healthcheck:
       test: [ "CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list" ]
       interval: 5s
@@ -97,13 +114,14 @@ services:
           - kafka
 
   kafka-setup:
-    image: apache/kafka:4.1.1
+    image: apache/kafka:3.7.1
     container_name: kafka-setup
     depends_on:
       kafka:
         condition: service_healthy
     command: >
       bash -c "
+        /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --bootstrap-server kafka:9092 --topic _schemas --partitions 1 --replication-factor 1 --config cleanup.policy=compact &&
         /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --bootstrap-server kafka:9092 --topic login-events --partitions 1 --replication-factor 1 &&
         /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --bootstrap-server kafka:9092 --topic login-events-enriched --partitions 1 --replication-factor 1 &&
         /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --bootstrap-server kafka:9092 --topic login-anomalies --partitions 1 --replication-factor 1
@@ -122,8 +140,14 @@ services:
       - "8081:8081"
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'kafka:9092'
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'PLAINTEXT://kafka:9092'
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8081" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
     networks:
       iceberg_net:
 
@@ -366,11 +390,20 @@ services:
   clickhouse:
     image: clickhouse/clickhouse-server:24.8
     container_name: clickhouse
+    depends_on:
+      - schema-registry
+      - kafka
     volumes:
       - ./clickhouse/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       CLICKHOUSE_USER: ${CLICKHOUSE_USER:-default}
       CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD:-mysecret}
+    healthcheck:
+      test: [ "CMD", "wget", "--spider", "-q", "http://localhost:8123/ping" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
     ports:
       - "9002:9000"
       - "8123:8123"
@@ -399,7 +432,7 @@ services:
     image: flink:1.17.2-scala_2.12-java11
     container_name: jobmanager
     ports:
-      - 8081:8081
+      - 8082:8081
     command: jobmanager
     volumes:
       - ./flink/sql:/opt/flink/flink-sql
@@ -409,6 +442,12 @@ services:
       - |
         FLINK_PROPERTIES=
         jobmanager.rpc.address: jobmanager        
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8081/" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
     networks:
       iceberg_net:
 
@@ -438,3 +477,4 @@ networks:
 
 volumes:
   minio_data:
+  kafka_data:
